--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -113,21 +113,13 @@ jobs:
   upload-bundle:
     name: Bundle binaries with dev assets
     runs-on: ubuntu-latest
-    needs: [build-lin, build-mac, build-win]
+    needs: [build-win]
     steps:
     - uses: actions/checkout@v3
     - name: Download Windows binary
       uses: actions/download-artifact@v3
       with:
         name: escort-mission-win
-    - name: Download Linux binary
-      uses: actions/download-artifact@v3
-      with:
-        name: escort-mission-lin
-    - name: Download Mac binary
-      uses: actions/download-artifact@v3
-      with:
-        name: escort-mission-mac
     - name: Upload beta testing bundle
       uses: actions/upload-artifact@v3
       with:
@@ -135,8 +127,6 @@ jobs:
         path: |
           README.md
           LICENSE
-          escort-mission-lin.tar.gz
-          escort-mission-mac.tar.gz
           escort-mission.exe
 
   deploy-win:
