--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,6 +28,12 @@ jobs:
       uses: actions/setup-go@v3
       with:
         go-version: 1.19
+    - name: Install dependencies
+      shell: bash
+      run: go get github.com/akavel/rsrc
+    - name: Generate icon resource
+      shell: bash
+      run: rsrc -ico artwork/icon.ico
     - name: Build Windows exe
       shell: bash
       run: go build
