--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
         go-version: 1.19
     - name: Install dependencies
       shell: bash
-      run: go get github.com/akavel/rsrc
+      run: go install github.com/akavel/rsrc@latest
     - name: Generate icon resource
       shell: bash
       run: rsrc -ico artwork/icon.ico
