Make Dog outOfSightLimit configurable from config file
This was hard-coded to 300 so far.  Moving it out to a variable and
making it configurable at game startup time so that testers can try out
different values for it.

--- a/escort-mission.ini.example
+++ b/escort-mission.ini.example
@@ -59,3 +59,9 @@ ZombieSafeRadius = 192
 
 # fleeingPathLength: the length of the path planned for fleeing
 FleeingPathLength = 200
+
+# fleeingPathLength: the length of the path planned for fleeing
+FleeingPathLength = 200
+
+# how much time (ticks) the dog can be out of sight before it dies
+OutOfSightLimit = 300
